[gd_scene load_steps=10 format=3 uid="uid://cs8d2h3ldiamk"]

[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorGraphNodeBase.tscn" id="1_40vcr"]
[ext_resource type="StyleBox" uid="uid://cy2mtyhieui8q" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node.tres" id="2_rv5vu"]
[ext_resource type="StyleBox" uid="uid://dt03i76r27rvt" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node_selected.tres" id="3_likff"]
[ext_resource type="StyleBox" uid="uid://bfb7qelnfi6bj" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node_titlebar.tres" id="4_e0k6l"]
[ext_resource type="StyleBox" uid="uid://cg1qeowcx5883" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_node_titlebar_selected.tres" id="5_0dlts"]
[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorMatchBranchNode.gd" id="6_2lu8v"]
[ext_resource type="PackedScene" uid="uid://c31q0dbk4i25w" path="res://addons/hyh.cutscene_graph/editor/controls/VariableSelectionControl.tscn" id="7_61d5t"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.cutscene_graph/icons/icon_add.svg" id="8_pxhqs"]
[ext_resource type="PackedScene" uid="uid://blu15ehhb5avh" path="res://addons/hyh.cutscene_graph/editor/branches/EditorMatchBranchValue.tscn" id="9_ii30g"]

[node name="EditorBranchNode" instance=ExtResource("1_40vcr")]
offset_top = 1.0
offset_right = 471.0
offset_bottom = 196.0
theme_override_constants/separation = 10
theme_override_styles/panel = ExtResource("2_rv5vu")
theme_override_styles/panel_selected = ExtResource("3_likff")
theme_override_styles/titlebar = ExtResource("4_e0k6l")
theme_override_styles/titlebar_selected = ExtResource("5_0dlts")
title = "Branch (Match)"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("6_2lu8v")

[node name="MC" type="MarginContainer" parent="." index="1"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="VB" type="VBoxContainer" parent="MC" index="0"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="MC/VB" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="GC" type="GridContainer" parent="MC/VB/HeaderContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="MC/VB/HeaderContainer/GC" index="0"]
layout_mode = 2
text = "Variable:"

[node name="VariableSelectionControl" parent="MC/VB/HeaderContainer/GC" index="1" instance=ExtResource("7_61d5t")]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddBranchButton" type="Button" parent="MC/VB/HeaderContainer" index="1"]
layout_mode = 2
size_flags_vertical = 8
icon = ExtResource("8_pxhqs")
flat = true

[node name="ScopeContainer" type="HBoxContainer" parent="MC/VB" index="1"]
layout_mode = 2

[node name="BranchValue" parent="." index="2" instance=ExtResource("9_ii30g")]
layout_mode = 2

[node name="BranchValue2" parent="." index="3" instance=ExtResource("9_ii30g")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="variable_selected" from="MC/VB/HeaderContainer/GC/VariableSelectionControl" to="." method="_on_variable_selection_control_variable_selected"]
[connection signal="pressed" from="MC/VB/HeaderContainer/AddBranchButton" to="." method="_on_add_branch_button_pressed"]
[connection signal="modified" from="BranchValue" to="." method="_on_branch_modified" binds= [0]]
[connection signal="remove_requested" from="BranchValue" to="." method="_on_branch_remove_requested" binds= [0]]
[connection signal="modified" from="BranchValue2" to="." method="_on_branch_modified" binds= [1]]
[connection signal="remove_requested" from="BranchValue2" to="." method="_on_branch_remove_requested" binds= [1]]
